--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <script src="index.js?12123123" defer></script>
+        <script src="index.js?2345" defer></script>
     </head>
     <body class="">        
         <header class="container-md row header text-center" style="margin: auto"> <!--header-->
